[gd_scene load_steps=3 format=3 uid="uid://coqyxcm4m5q6e"]

[ext_resource type="Script" path="res://laser.gd" id="1_n114b"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_12cb0"]
a = Vector2(130, 9.79592)

[node name="Laser" type="RayCast2D"]
target_position = Vector2(300, 0)
script = ExtResource("1_n114b")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(4.25843, -15)
scale = Vector2(2.20225, 0.344531)
points = PackedVector2Array(-2, 45, 128, 45)
width = 24.0
default_color = Color(0, 0.631373, 0.980392, 1)

[node name="DamageArea" type="Area2D" parent="Line2D"]
collision_layer = 9
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Line2D/DamageArea"]
position = Vector2(-1, 35.9184)
shape = SubResource("SegmentShape2D_12cb0")

[node name="Refrence" type="Marker2D" parent="."]
position = Vector2(286, 0)

[connection signal="area_entered" from="Line2D/DamageArea" to="." method="_on_damage_area_area_entered"]
[connection signal="body_entered" from="Line2D/DamageArea" to="." method="_on_damage_area_body_entered"]
